; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/net80211/w00t/ap/extr_ap.c_send_assoc.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/net80211/w00t/ap/extr_ap.c_send_assoc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.params = type { i8* }
%struct.ieee80211_frame = type { i32*, i32, i32 }

@IEEE80211_FC0_TYPE_MGT = common dso_local global i32 0, align 4
@IEEE80211_FC0_SUBTYPE_ASSOC_RESP = common dso_local global i32 0, align 4
@IEEE80211_CAPINFO_ESS = common dso_local global i8 0, align 1
@.str = private unnamed_addr constant [24 x i8] c"sending assoc response\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_assoc(%struct.params* %0, i8* %1) #0 {
  %3 = alloca %struct.params*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca [4096 x i8], align 16
  %6 = alloca %struct.ieee80211_frame*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.params* %0, %struct.params** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = getelementptr inbounds [4096 x i8], [4096 x i8]* %5, i64 0, i64 0
  %10 = bitcast i8* %9 to %struct.ieee80211_frame*
  store %struct.ieee80211_frame* %10, %struct.ieee80211_frame** %6, align 8
  %11 = getelementptr inbounds [4096 x i8], [4096 x i8]* %5, i64 0, i64 0
  %12 = call i32 @memset(i8* %11, i32 0, i32 4096)
  %13 = load %struct.ieee80211_frame*, %struct.ieee80211_frame** %6, align 8
  %14 = load %struct.params*, %struct.params** %3, align 8
  %15 = call i32 @fill_basic(%struct.ieee80211_frame* %13, %struct.params* %14)
  %16 = load %struct.ieee80211_frame*, %struct.ieee80211_frame** %6, align 8
  %17 = getelementptr inbounds %struct.ieee80211_frame, %struct.ieee80211_frame* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @memcpy(i32 %18, i8* %19, i32 6)
  %21 = load %struct.ieee80211_frame*, %struct.ieee80211_frame** %6, align 8
  %22 = getelementptr inbounds %struct.ieee80211_frame, %struct.ieee80211_frame* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = load %struct.params*, %struct.params** %3, align 8
  %25 = getelementptr inbounds %struct.params, %struct.params* %24, i32 0, i32 0
  %26 = load i8*, i8** %25, align 8
  %27 = call i32 @memcpy(i32 %23, i8* %26, i32 6)
  %28 = load i32, i32* @IEEE80211_FC0_TYPE_MGT, align 4
  %29 = load %struct.ieee80211_frame*, %struct.ieee80211_frame** %6, align 8
  %30 = getelementptr inbounds %struct.ieee80211_frame, %struct.ieee80211_frame* %29, i32 0, i32 0
  %31 = load i32*, i32** %30, align 8
  %32 = getelementptr inbounds i32, i32* %31, i64 0
  %33 = load i32, i32* %32, align 4
  %34 = or i32 %33, %28
  store i32 %34, i32* %32, align 4
  %35 = load i32, i32* @IEEE80211_FC0_SUBTYPE_ASSOC_RESP, align 4
  %36 = load %struct.ieee80211_frame*, %struct.ieee80211_frame** %6, align 8
  %37 = getelementptr inbounds %struct.ieee80211_frame, %struct.ieee80211_frame* %36, i32 0, i32 0
  %38 = load i32*, i32** %37, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 0
  %40 = load i32, i32* %39, align 4
  %41 = or i32 %40, %35
  store i32 %41, i32* %39, align 4
  %42 = load %struct.ieee80211_frame*, %struct.ieee80211_frame** %6, align 8
  %43 = getelementptr inbounds %struct.ieee80211_frame, %struct.ieee80211_frame* %42, i64 1
  %44 = bitcast %struct.ieee80211_frame* %43 to i8*
  store i8* %44, i8** %7, align 8
  %45 = load i8, i8* @IEEE80211_CAPINFO_ESS, align 1
  %46 = sext i8 %45 to i32
  %47 = load i8*, i8** %7, align 8
  %48 = load i8, i8* %47, align 1
  %49 = sext i8 %48 to i32
  %50 = or i32 %49, %46
  %51 = trunc i32 %50 to i8
  store i8 %51, i8* %47, align 1
  %52 = load i8*, i8** %7, align 8
  %53 = getelementptr inbounds i8, i8* %52, i64 2
  store i8* %53, i8** %7, align 8
  %54 = load i8*, i8** %7, align 8
  %55 = getelementptr inbounds i8, i8* %54, i64 2
  store i8* %55, i8** %7, align 8
  %56 = load i8*, i8** %7, align 8
  %57 = getelementptr inbounds i8, i8* %56, i64 2
  store i8* %57, i8** %7, align 8
  %58 = load i8*, i8** %7, align 8
  %59 = getelementptr inbounds i8, i8* %58, i32 1
  store i8* %59, i8** %7, align 8
  store i8 1, i8* %58, align 1
  %60 = load i8*, i8** %7, align 8
  %61 = getelementptr inbounds i8, i8* %60, i32 1
  store i8* %61, i8** %7, align 8
  store i8 4, i8* %60, align 1
  %62 = load i8*, i8** %7, align 8
  %63 = getelementptr inbounds i8, i8* %62, i32 1
  store i8* %63, i8** %7, align 8
  store i8 -126, i8* %62, align 1
  %64 = load i8*, i8** %7, align 8
  %65 = getelementptr inbounds i8, i8* %64, i32 1
  store i8* %65, i8** %7, align 8
  store i8 -124, i8* %64, align 1
  %66 = load i8*, i8** %7, align 8
  %67 = getelementptr inbounds i8, i8* %66, i32 1
  store i8* %67, i8** %7, align 8
  store i8 11, i8* %66, align 1
  %68 = load i8*, i8** %7, align 8
  %69 = getelementptr inbounds i8, i8* %68, i32 1
  store i8* %69, i8** %7, align 8
  store i8 22, i8* %68, align 1
  %70 = load i8*, i8** %7, align 8
  %71 = load %struct.ieee80211_frame*, %struct.ieee80211_frame** %6, align 8
  %72 = bitcast %struct.ieee80211_frame* %71 to i8*
  %73 = ptrtoint i8* %70 to i64
  %74 = ptrtoint i8* %72 to i64
  %75 = sub i64 %73, %74
  %76 = trunc i64 %75 to i32
  store i32 %76, i32* %8, align 4
  %77 = call i32 @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %78 = load %struct.params*, %struct.params** %3, align 8
  %79 = load %struct.ieee80211_frame*, %struct.ieee80211_frame** %6, align 8
  %80 = load i32, i32* %8, align 4
  %81 = call i32 @send_frame(%struct.params* %78, %struct.ieee80211_frame* %79, i32 %80)
  ret void
}

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @fill_basic(%struct.ieee80211_frame*, %struct.params*) #1

declare dso_local i32 @memcpy(i32, i8*, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @send_frame(%struct.params*, %struct.ieee80211_frame*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
